--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 
-    
+
 #navbar{
 display: flex;
 flex-direction: row;
@@ -66,6 +66,65 @@ justify-content: flex-end;
     text-align: justify;
     
 }
+
+
+/* text y ops */
+#textosyops{
+    display: flex;
+
+}
+
+#ops{
+ /*    padding-right: 100px; */
+
+
+}
+
+#textos{
+    
+    display: grid; 
+    grid-auto-columns: 1fr; 
+    grid-auto-rows: 1fr; 
+    grid-template-columns: 1fr 1fr 1fr; 
+    grid-template-rows: 1fr 1fr 1fr; 
+    gap: 0px 5px; 
+    grid-template-areas: 
+      ". . ."
+      ". . ."
+      ". . ."; 
+    justify-content: start; 
+    align-content: center; 
+    justify-items: stretch; 
+    align-items: stretch; 
+
+}
+
+.texto{
+    background-color: #f8f9fa;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 @media screen and (max-width: 768px){
     #searchBar{
@@ -140,5 +199,62 @@ justify-content: flex-end;
     #smallMenuId.show{
         display: none;
     }
+
+
+
+    #ops{
+        display: none;
+    }
+    
+    #textos{
+    
+            display: grid; 
+            grid-template-columns: 250px 250px ; 
+            grid-template-rows: 150px 150px; 
+            gap: 10px 20px; 
+            grid-template-areas: 
+            ". . "
+            ". . "; 
+            justify-content: center; 
+            align-content: center; 
+            justify-items: stretch; 
+            align-items: center; 
+    }
+    
+    
+    
+    
+
+
+
+
+
+
+}
+
+
+
+@media screen and (max-width: 576px){
+
+    #textosyops{
+        display: block;
+        margin: auto;
+    }
+    #textos{
+    
+        display: grid; 
+        grid-template-columns: 250px; 
+        grid-template-rows: 120px; 
+        gap: 0px 0px; 
+        grid-template-areas: 
+        "."
+        "."; 
+        justify-content: center; 
+        align-content: center; 
+        justify-items: stretch; 
+        align-items: center; 
+}
+
+
 
 }
