--- a/css/style.css
+++ b/css/style.css
@@ -87,7 +87,7 @@ justify-content: flex-end;
     grid-auto-rows: 1fr; 
     grid-template-columns: 1fr 1fr 1fr; 
     grid-template-rows: 0.5fr 0.5fr 0.5fr; 
-    gap: 0px 5px; 
+    gap: 15px 5px; 
     grid-template-areas: 
       ". . ."
       ". . ."
@@ -211,7 +211,7 @@ justify-content: flex-end;
             display: grid; 
             grid-template-columns: 250px 250px ; 
             grid-template-rows: 150px 150px; 
-            gap: 10px 20px; 
+            gap: 0px 20px; 
             grid-template-areas: 
             ". . "
             ". . "; 
@@ -244,7 +244,7 @@ justify-content: flex-end;
     
         display: grid; 
         grid-template-columns: 250px; 
-        grid-template-rows: 120px; 
+        grid-template-rows: 140px  140px  140px  140px  140px  140px  140px  140px; 
         gap: 0px 0px; 
         grid-template-areas: 
         "."
