--- a/css/style.css
+++ b/css/style.css
@@ -210,7 +210,7 @@ justify-content: flex-end;
     
             display: grid; 
             grid-template-columns: 250px 250px ; 
-            grid-template-rows: 150px 150px; 
+            grid-template-rows: 140px  140px  140px  140px  140px  140px  140px  140px; 
             gap: 0px 20px; 
             grid-template-areas: 
             ". . "
